--- a/css/artShow.css
+++ b/css/artShow.css
@@ -262,3 +262,164 @@ body {
 /*
   End Mona Lisa
 */
+
+/* Start Paintings */
+.Paintings {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--section-background);
+}
+.Paintings .Paintings-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 30px;
+  margin-top: 80px;
+}
+.Paintings .Paintings-content .card {
+  background-color: white;
+}
+.Paintings .Paintings-content .card img {
+  max-width: 100%;
+}
+.Paintings .Paintings-content .card .info {
+  padding: 20px;
+}
+.Paintings .Paintings-content .card .info h3 {
+  margin: 0;
+}
+.Paintings .Paintings-content .card .info p {
+  color: #777;
+  line-height: 1.6;
+  margin-bottom: 0;
+}
+/* End Paintings */
+/* Start Favorite */
+.Favorite {
+  padding-top: var(--section-padding);
+  padding-bottom: calc(var(--section-padding) + 60px);
+}
+.Favorite .Favorite-content {
+  margin-top: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+@media (max-width: 991px) {
+  .Favorite .Favorite-content {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+.Favorite .Favorite-content .image {
+  position: relative;
+  width: 250px;
+  height: 375px;
+}
+@media (max-width: 991px) {
+  .Favorite .Favorite-content .image {
+    margin: 0 auto 60px;
+  }
+}
+.Favorite .Favorite-content .image::before {
+  content: "";
+  position: absolute;
+  background-color: #ebeced;
+  width: 100px;
+  height: calc(100% + 80px);
+  top: -40px;
+  left: -20px;
+  z-index: -1;
+}
+.Favorite .Favorite-content .image::after {
+  top: -40px;
+  content: "";
+  position: absolute;
+  width: 120px;
+  height: 300px;
+  border-left: 80px solid var(--main-color);
+  border-bottom: 80px solid var(--main-color);
+  z-index: -1;
+  right: -150px;
+}
+@media (max-width: 991px) {
+  .Favorite .Favorite-content .image::before,
+  .Favorite .Favorite-content .image::after {
+    display: none;
+  }
+}
+.Favorite .Favorite-content .image img {
+  max-width: 100%;
+}
+.Favorite .Favorite-content .text {
+  flex-basis: calc(100% - 500px);
+}
+.Favorite .Favorite-content .text p:first-of-type {
+  font-weight: bold;
+  line-height: 2;
+  margin-bottom: 50px;
+}
+.Favorite .Favorite-content .text hr {
+  width: 50%;
+  display: inline-block;
+  border-color: var(--main-color);
+}
+.Favorite .Favorite-content .text p:last-of-type {
+  line-height: 2;
+  color: #777;
+}
+/* End Favorite */
+/* Start Contact */
+.contact {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: var(--section-background);
+}
+.contact .info {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  text-align: center;
+}
+.contact .info .label {
+  font-size: 35px;
+  font-weight: 800;
+  color: var(--secondary-color);
+  letter-spacing: -2px;
+  margin-bottom: 15px;
+}
+.contact .info .link {
+  display: block;
+  font-size: 35px;
+  font-weight: 800;
+  color: var(--main-color);
+  text-decoration: none;
+}
+.contact .info .social {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  font-size: 16px;
+}
+.contact .info .social i {
+  margin-left: 10px;
+  color: var(--secondary-color);
+}
+@media (max-width: 767px) {
+  .contact .info .label,
+  .contact .info .link {
+    font-size: 25px;
+  }
+}
+/* End Contact */
+/* Start Footer */
+.footer {
+  background-color: var(--secondary-color);
+  color: white;
+  padding: 30px 10px;
+  text-align: center;
+  font-size: 18px;
+}
+.footer span {
+  font-weight: bold;
+  color: var(--main-color);
+}
+/* End Footer */
